# distributed-pytorch-hpc

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  main.py  mkdocs.yml  multigpu_resnet.py  pyproject.toml  resnet_train.py  sitemap.xml  torchrun_multigpu_pbs.sh  torchrun_pbs_0919_mpi_3.sh  torchrun_pbs_0919_mpi_4.sh  torchrun_pbs_for_john.sh
.github/workflows/: deploy-docs.yml
docs/: derecho_guide.md  index.md  mkdocs.yml  troubleshooting.md
docs/guide/: 01_single_gpu_baseline.md  02_why_distributed.md  03_communication_primitives.md  04_data_parallel_ddp.md  05_fully_sharded_fsdp.md  06_tensor_parallel.md  07_pipeline_parallel.md  (+9 more)
fsdp_tp/: README.md  fsdp_tp_example.py  tensor_parallel_example.py
scripts/: README.md  main.py  multigpu_nerualnet.py  multigpu_resnet.py  multigpu_resnet_FSDP.py  pbs_common.sh  resnet_train.py  run_mpi.sh  torchrun_multigpu_example.py  torchrun_multigpu_pbs.sh  torchrun_multigpu_pbs_FSDP.sh
search/: search_index.json
tests/: README.md  all_reduce_test.py  check_environment.py  comm_test.py  pbs_run_tests.sh  run_tests.sh  send_recv_test.py  test.sh  test_env.py  test_torchrun.py  torch_comm_bench.py  torch_nccl_speed.py  torchrun_mpi_comm_test.sh  torchrun_mpi_comm_test2.sh  torchrun_mpi_comm_test3.sh  torchrun_mpi_old_test.sh  torchrun_nccl.sh  torchrun_new_nccl_test.sh
trainings/: print_hostinfo.py  print_hostname.py  test_torchrun.py
tutorials/: test_torchrun.py  torchrun_pbs_explain.sh
utils/: __init__.py  checkpointing.py  config.py  distributed.py  logging.py  profiling.py  redirect.py
(+60 files in other folders)
