[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-pytorch-hpc"
version = "0.1.0"
description = "Distributed PyTorch training examples for NCAR's Derecho"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Negin Sobhani", email = "negins@ucar.edu"},
]
dependencies = []

[tool.setuptools.packages.find]
include = ["utils*"]

[tool.pixi.workspace]
channels = ["file:///glade/work/benkirk/consulting/conda-recipes/output", "conda-forge/label/mpi-external", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
mpi4py = { version = "*", build = "derecho*" }
pip = "*"
pytorch = { version = "==2.8.0", build = "derecho*" }
torchvision = { version = "*", build = "derecho*" }
pyyaml = "*"
numpy = "*"
